create card basic functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="filtering-button">Done</button>
         <!-- deberian ser botones o pueden ser divs -->
       </section>
-      <section>lista de tareas, deberian ser cards creadas</section>
+      <section id="task-cards-container">lista de tareas, deberian ser cards creadas</section>
       <section>
         <div class="tasks-resume">
           <p>total tasks: <span></span></p>
