discover how to display doingBtnList elements and where do I need to update binding

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="task-cards-container">lista de tareas, deberian ser cards creadas</section>
       <section>
         <div class="tasks-resume">
-          <p>total tasks: <span></span></p>
+          <p>total tasks: <span id="total-tasks-span">""</span></p>
           <p>backlog: <span></span></p>
           <p>Doing: <span></span></p>
           <p>Done: <span></span></p>
