fixing status assignment and button coloring

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <button id="add-task-button">enter</button>
       </section>
       <section>
-        <button class="filtering-button">Backlog</button>
-        <button class="filtering-button">Doing</button>
-        <button class="filtering-button">Done</button>
+        <button class="filtering-button">backlog</button>
+        <button class="filtering-button">doing</button>
+        <button class="filtering-button">done</button>
         <!-- deberian ser botones o pueden ser divs -->
       </section>
       <section id="task-cards-container">lista de tareas, deberian ser cards creadas</section>
