add counter full functionality

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <section>
         <div class="tasks-resume">
           <p>total tasks: <span id="total-tasks-span">""</span></p>
-          <p>backlog: <span></span></p>
-          <p>Doing: <span></span></p>
-          <p>Done: <span></span></p>
+          <p>backlog: <span id="backlog-tasks-span"></span></p>
+          <p>Doing: <span id="doing-tasks-span"></span></p>
+          <p>Done: <span id="done-tasks-span"></span></p>
         </div>
       </section>
     </main>
