add some styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="filtering-button">done</button>
         <!-- deberian ser botones o pueden ser divs -->
       </section>
-      <section id="task-cards-container">lista de tareas, deberian ser cards creadas</section>
+      <section id="task-cards-container"><h1>Lista de Tareas</h1></section>
       <section>
         <div class="tasks-resume">
           <p>total tasks: <span id="total-tasks-span">""</span></p>
