add more styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <main>
+      <h1 class="app-title">Task tracker</h1>
       <section class="add-new-task-section">
         <div class="new-task-details">
           <div class="new-task-name-container">
@@ -27,7 +28,7 @@
         <button class="filtering-button">done</button>
         <!-- deberian ser botones o pueden ser divs -->
       </section>
-      <section id="task-cards-container"><h1>Lista de Tareas</h1></section>
+      <section id="task-cards-container"><h1 class="task-section-title">Lista de Tareas</h1></section>
       <section>
         <div class="tasks-resume">
           <p>total tasks: <span id="total-tasks-span">""</span></p>
