--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- hola profe, el proyecto esta solo pensado mobile first. porfa vealo en esa forma sino queda muy feo -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
