change html structure to show total tasks first

--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
         <button class="filtering-button">done</button>
         <!-- deberian ser botones o pueden ser divs -->
       </section>
+      <div class="tasks-resume">
+        <p>total tasks: <span id="total-tasks-span">""</span></p>
+        <p>backlog: <span id="backlog-tasks-span"></span></p>
+        <p>Doing: <span id="doing-tasks-span"></span></p>
+        <p>Done: <span id="done-tasks-span"></span></p>
+      </div>
       <section id="task-cards-container"><h1 class="task-section-title">Lista de Tareas</h1></section>
+
       <section>
-        <div class="tasks-resume">
+        <!-- <div class="tasks-resume">
           <p>total tasks: <span id="total-tasks-span">""</span></p>
           <p>backlog: <span id="backlog-tasks-span"></span></p>
           <p>Doing: <span id="doing-tasks-span"></span></p>
           <p>Done: <span id="done-tasks-span"></span></p>
-        </div>
+        </div> -->
       </section>
     </main>
     <script src="./assets/js/script.js"></script>
