--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <section class="add-new-task-section">
         <div class="new-task-details">
           <div class="new-task-name-container">
-            <label for="new-task-name">Task name</label>
+            <label for="new-task-name"><p>Task name</p></label>
             <input id="new-task-name" type="text" />
           </div>
           <div class="new-task-description-container">
-            <label for="new-task-description">Description</label>
+            <label for="new-task-description"><p>Description</p></label>
             <input id="new-task-description" type="text" />
           </div>
+          <button id="add-task-button">enter</button>
         </div>
-        <button id="add-task-button">enter</button>
       </section>
       <section>
         <button class="filtering-button">backlog</button>
