fix hover on butons

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <label for="new-task-description"><p>Description</p></label>
             <input id="new-task-description" type="text" />
           </div>
-          <button id="add-task-button">enter</button>
+          <button class="hover-button" id="add-task-button">enter</button>
         </div>
       </section>
       <section>
-        <button class="filtering-button">backlog</button>
-        <button class="filtering-button">doing</button>
-        <button class="filtering-button">done</button>
+        <button class="filtering-button hover-button">backlog</button>
+        <button class="filtering-button hover-button">doing</button>
+        <button class="filtering-button hover-button">done</button>
         <!-- deberian ser botones o pueden ser divs -->
       </section>
       <div class="tasks-resume">
